<resources>
    <string name="app_name">Notes App</string>
    <string name="smile_emoji">Smile emoji</string>
    <string name="big_smile_emoji">Big smile emoji</string>
    <string name="cry_emoji">Cry emoji</string>
    <string name="neutral_emoji">Neutral emoji</string>
    <string name="sad_emoji">Sad emoji</string>
    <string name="choose_your_emotion">Choose your emotion</string>
    <string name="choose_current_weather">Choose current weather</string>
    <string name="storm">Storm</string>
    <string name="rain">Rain</string>
    <string name="cloud_and_sun">Cloud And Sun</string>
    <string name="cloud_rain_and_sun">Cloud, Rain And Sun</string>
    <string name="sun">Sun</string>
    <string name="clouds">Clouds</string>
    <string name="angry_emoji">Angry emoji</string>
    <string name="title_activity_main">Notes App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="login_status">Вы не вошли в систему</string>
    <string name="prompt_email">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="login_failed">"Login failed"</string>
    <string name="invalid_username">Введено некорректное имя</string>
    <string name="invalid_password">Пароль должен содержать более 5 символов</string>
    <string name="title_activity_login">Вход в систему</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
